# data_quality_dbt

./: README.md  pyproject.toml
data_quality_dbt/: dbt_project.yml  packages.yml  pyproject.toml
data_quality_dbt/models/staging/: staging.md  staging.yml  stg_locker_events.sql  stg_som_so_transactions.sql
data_quality_dbt/tests/: assert_event_ts_occurred_in_past.sql
