[tool.poetry]
name = "data_quality_dbt"
version = "0.1.0"
description = ""
authors = ["Connor Stevens <connor.stevens@ingka.ikea.com>"]

[tool.poetry.dependencies]
python = "^3.10"
dbt-bigquery = "^1.1.1"
re-data = "^0.9.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
